tests/src/Loader/classloader/generics/Instantiation/Negative/param08.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param08_param08_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param08_param08_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param08\\param08.cmd");
        }
    }
}
